@startuml

title Evermind - Relational model
skinparam nodesep 70
left to right direction
' uncomment the line below if you're using computer with a retina display
' skinparam dpi 300
!define Table(name,desc) class name as "desc" << (E,#FFAAAA) >>
' we use bold for primary key
' green color for unique
' and underscore for not_null
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>
' other tags available:
' <i></i>
' <back:COLOR></color>, where color is a color name or html color code
' (#FFAACC)
' see: http://plantuml.com/classes.html#More
hide methods
hide stereotypes
top to bottom direction
' entities

note as N1
    Font meaning:
      bold is primary key
      underlined is not null
      italic is foreign key
endNote

Table(user, "user\n(User in our system)") {
    primary_key(id) VARCHAR
    not_null(name) VARCHAR[16]
    not_null(unique(username)) VARCHAR[16]
    not_null(unique(email)) VARCHAR[64]
    not_null(password) VARCHAR[64]
    not_null(status) VARCHAR[16]
    not_null(last_login) TIMESTAMP
    not_null(last_connection) TIMESTAMP
    not_null(sign_in) TIMESTAMP
    not_null(day_start_time) INTEGER
}

Table(subscription, "subscription\n(A subscription of\na user to a card") {
    primary_key(user_id) VARCHAR
    primary_key(card_id) VARCHAR
    not_null(level) INTEGER
    last_review TIMESTAMP
    next_review TIMESTAMP
}

Table(card, "card\n(An answer/question set)") {
    primary_key(id) VARCHAR
    foreign_key(author_id) VARCHAR
    question VARCHAR
    answer VARCHAR
    labelling MULTIVALUATED VARCHAR
}

user "1" -- "0..*" subscription
card "1" -- "0..*" subscription


@enduml
